force-app/main/default/objects/Lead/fields/Associated_Account__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-11375</description>
    <label>Associated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>