force-app/main/default/objects/Lead/fields/Associated_Account_fx__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account_fx__c</fullName>
    <description>This is created to make lead assignment rule work US-11367</description>
    <formula>Associated_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Account fx</label>
    <type>Text</type>
</CustomField>