force-app/main/default/objects/Lead/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>