force-app/main/default/objects/Lead/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market_Segment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>4+ Star Hotel</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Budget Hotel / Motel / Hostel</fullName>
            </value>
            <value>
                <fullName>Business Office - High / Premium</fullName>
            </value>
            <value>
                <fullName>Business Office - Low/Functional</fullName>
            </value>
            <value>
                <fullName>Business Office - Medium / Comfort</fullName>
            </value>
            <value>
                <fullName>Cargo Ship</fullName>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Cinema Complex</fullName>
            </value>
            <value>
                <fullName>Convention/Business Center</fullName>
            </value>
            <value>
                <fullName>Cruise Liner</fullName>
            </value>
            <value>
                <fullName>Cultural Center</fullName>
            </value>
            <value>
                <fullName>Dam</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
            <value>
                <fullName>Ferry Terminal</fullName>
            </value>
            <value>
                <fullName>Functional Department Stores</fullName>
            </value>
            <value>
                <fullName>Functional Shopping Mall</fullName>
            </value>
            <value>
                <fullName>Government / Public Office</fullName>
            </value>
            <value>
                <fullName>Ind. Park / Factory / Plant</fullName>
            </value>
            <value>
                <fullName>Med Center / Office / Clinic</fullName>
            </value>
            <value>
                <fullName>Metro/Subway</fullName>
            </value>
            <value>
                <fullName>Mid-Range Hotel</fullName>
            </value>
            <value>
                <fullName>Mining Facility</fullName>
            </value>
            <value>
                <fullName>Mixed Use - Functional</fullName>
            </value>
            <value>
                <fullName>Mixed Use - Premium</fullName>
            </value>
            <value>
                <fullName>Museum</fullName>
            </value>
            <value>
                <fullName>Oil/Gas Facility</fullName>
            </value>
            <value>
                <fullName>Oil Platform</fullName>
            </value>
            <value>
                <fullName>Owned/Rented Apartments</fullName>
            </value>
            <value>
                <fullName>Parking Garage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>