force-app/main/default/objects/Lead/fields/ConstructionPts__CP_Project__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__CP_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dodge Project</label>
    <referenceTo>ConstructionPts__CP_Project__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>