force-app/main/default/objects/Lead/fields/ConstructionPts__CPLink__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__CPLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dodge Company Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>