force-app/main/default/objects/Lead/fields/ConstructionPts__Dodge_Company__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__Dodge_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dodge Company</label>
    <referenceTo>ConstructionPts__CP_Company__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>