force-app/main/default/objects/Lead/fields/Current_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_End_Date__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Contract End Date</label>
    <type>Date</type>
</CustomField>