force-app/main/default/objects/Lead/fields/DNBConnect__D_B_Contact_Match_Driver__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__D_B_Contact_Match_Driver__c</fullName>
    <description>The driver explaining how the resulting match was found.
Possible values include:
Contact ID Lookup
Email Lookup
Company + Contact Match
Company Family + Contact Match
Company Only Match</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The driver explaining how the resulting match was found.
Possible values include:
Contact ID Lookup
Email Lookup
Company + Contact Match
Company Family + Contact Match
Company Only Match</inlineHelpText>
    <label>D&amp;B Contact Match Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>