force-app/main/default/objects/Lead/fields/DNBConnect__matchedDuns__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__matchedDuns__c</fullName>
    <description>This field can be different from the D-U-N-S value held in the custom object. Refer to your D-U-N-S Trade Up settings within your project setup for more details on how this match was made.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field can be different from the D-U-N-S value held in the custom object. Refer to your D-U-N-S Trade Up settings within your project setup for more details on how this match was made.</inlineHelpText>
    <label>Matched D-U-N-S</label>
    <length>9</length>
    <type>Text</type>
</CustomField>