force-app/main/default/objects/Lead/fields/Dodge_Number__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Number__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dodge Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>