force-app/main/default/objects/Lead/fields/Follow_up_date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_date__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow up date</label>
    <type>Date</type>
</CustomField>