force-app/main/default/objects/Lead/fields/Independent_Name__c.field-meta.xml
<CustomField>
    <fullName>Independent_Name__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Independent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>