force-app/main/default/objects/Lead/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>