force-app/main/default/objects/Lead/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <description>US-11375</description>
    <label>Line of Business</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>New Installation</fullName>
            </value>
            <value>
                <fullName>Modernization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>