force-app/main/default/objects/Lead/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <description>US-11375</description>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Education/Religion</fullName>
            </value>
            <value>
                <fullName>Entertainment/Leisure</fullName>
            </value>
            <value>
                <fullName>Ferry Terminal</fullName>
            </value>
            <value>
                <fullName>Hospital / Healthcare</fullName>
            </value>
            <value>
                <fullName>Hotel / Restaurant</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Metro/Subway</fullName>
            </value>
            <value>
                <fullName>Mixed Use Buildings</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Parking Garage</fullName>
            </value>
            <value>
                <fullName>Private Residential</fullName>
            </value>
            <value>
                <fullName>Railway / Bus Station</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Urban Mobility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>