force-app/main/default/objects/Lead/fields/Maximum_Landings__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Landings__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Maximum Landings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>