force-app/main/default/objects/Lead/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>