force-app/main/default/objects/Lead/fields/Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Phone__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Phone</label>
    <type>Phone</type>
</CustomField>