force-app/main/default/objects/Lead/fields/Potential_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Potential_Revenue__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Potential Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>