force-app/main/default/objects/Lead/fields/Primary_Lead_Interest__c.field-meta.xml
<CustomField>
    <fullName>Primary_Lead_Interest__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Lead Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>