force-app/main/default/objects/Lead/fields/Site_Phone__c.field-meta.xml
<CustomField>
    <fullName>Site_Phone__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Phone</label>
    <type>Phone</type>
</CustomField>