force-app/main/default/objects/Lead/fields/Total_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Total_SqFt__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Total SqFt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>