force-app/main/default/objects/Lead/fields/Type_Of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Sale__c</fullName>
    <description>This field is created as specified in story - US-11374</description>
    <label>Type Of Sale</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Foreign Maintenance</fullName>
            </value>
            <value>
                <fullName>NIM</fullName>
            </value>
            <value>
                <fullName>Recapture</fullName>
            </value>
            <value>
                <fullName>TKExtend</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>New Installation</fullName>
            </value>
            <value>
                <fullName>Modernization</fullName>
            </value>
            <value>
                <fullName>Capital Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>