force-app/main/default/objects/Lead/fields/Year_Modified__c.field-meta.xml
<CustomField>
    <fullName>Year_Modified__c</fullName>
    <description>US-11375</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Year Modified</label>
    <length>4</length>
    <type>Text</type>
</CustomField>