force-app/main/default/objects/Lead/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <description>US-11265</description>
    <errorConditionFormula>AND( ISBLANK(FirstName) , ISNEW(), NOT( $Permission.TKE_Bypass_Validation ))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>