force-app/main/default/objects/Lead/validationRules/SLS_City_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SLS_City_Required</fullName>
    <active>true</active>
    <description>US-11265</description>
    <errorConditionFormula>AND( ISBLANK(City) , ISNEW(), NOT( $Permission.TKE_Bypass_Validation ))</errorConditionFormula>
    <errorDisplayField>City</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>