force-app/main/default/objects/Lead/validationRules/SLS_State_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SLS_State_Required</fullName>
    <active>true</active>
    <description>US-11265</description>
    <errorConditionFormula>AND( ISBLANK(State) , ISNEW(),  NOT( $Permission.TKE_Bypass_Validation ))</errorConditionFormula>
    <errorDisplayField>State</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>