force-app/main/default/objects/Lead/listViews/General_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>General_Lead_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>General Lead Queue</label>
    <queue>General_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>