force-app/main/default/objects/Lead/listViews/New_Customer_Lead.listView-meta.xml
<ListView>
    <fullName>New_Customer_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>New Customer Queue</label>
    <queue>New_Customer_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>