force-app/main/default/objects/Lead/listViews/New_Installation_Lead.listView-meta.xml
<ListView>
    <fullName>New_Installation_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>New Installation Queue</label>
    <queue>New_Installation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>