force-app/main/default/objects/Lead/listViews/Sales_Support_Team_Lead.listView-meta.xml
<ListView>
    <fullName>Sales_Support_Team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Support Queue</label>
    <queue>Sales_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>