force-app/main/default/objects/Lead/listViews/Service_MOD_Repair_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Service_MOD_Repair_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Service/MOD/Repair Queue</label>
    <queue>Service_MOD_Repair_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>